# RelicCracker

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  devConstants.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_log.rs  commands.rs  drops.rs  hotkeys.rs  inventory.rs  lib.rs  log_watcher.rs  main.rs  market.rs  ocr.rs  overlay.rs  screen_watcher.rs  storage.rs  template.rs
src/completions/: CompletionsPage.tsx
src/components/: DevPanel.tsx  Layout.tsx
src/dashboard/: DashboardPage.tsx
src/inventory/: InventoryPage.tsx
src/logs/: LogsPage.tsx
src/overlay/: OverlayPage.tsx  RewardCard.tsx
src/planner/: PlannerPage.tsx
src/settings/: SettingsPage.tsx
