[package]
name = "relic-cracker"
version = "0.1.0"
edition = "2021"
description = "Warframe relic reward overlay with live WF Market prices"

[lib]
name = "relic_cracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", features = ["png"] }
xcap  = "0.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Media_Ocr",
    "Foundation_Collections",
    "Globalization",
    "Graphics_Imaging",
    "Storage_Streams",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_WinRT",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Memory",
] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 4
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
